Current Version: @@VERSION@@

ctags-5.4.1 (Sat Oct 26 2002)
* Changed kind indicator for methods from 'f' to 'm' [Tcl].
* Fixed problem with infinite loop in certain comments [PL/SQL, Bug #629115].
* Fixed man page errors and omissions.
* Fixed bug in readFieldValue() in readtags library.

ctags-5.4 (Thu Oct 17 2002)
* Improved ability for tagsOpen() in readtags library to report failure to
  open tag file, adding new fields to tagFileInfo structure.
* Improved Cobol support to include data, files, groups, and sections [Cobol].
* Added '$' a valid character for C identifier [VMS].
* Added support for recording routine argument declarations for C-like
  languages. See the --fields option and man page section TAG FILE FORMAT for
  more information [C, C++, Java].
* Added class and method support to TCL parser [TCL].
* Added support for PL/SQL language.
* Added support for Vera language, inspired by Dave Eggum [Vera].
* Fixed problem terminating Perl POD block [Perl, Bug #612621].
* Fixed problem re whitespace preceding subprogram name [Pascal, Bug #612019].
* Fixed problem with leading spaces before instruction [TCL, Bug #615928].
* Fixed problem with double precision functions [Fortran, Bug #620288].
* Fixed inverted test causing TMPDIR to be used for temporary files when
  ctags is setuid instead of when not setuid [Bug #623713].

ctags-5.3.1 (Thu Sep 12 2002)
* Renamed tagsSetSorted() to tagsSetSortType() and "sorted" member of
  tagFileInfo structure of readtags library to "sort".
* Added new function, tagsFirst() to readtags library.
* Fixed incorrect tag kinds [Verilog].
* Fixed null tags for unnamed BLOCK DATA statements [Fortran].
* Fixed missing tags for function preceded by "<SID>" [Vim].
* Fixed missing tags for equate statements not in column 1 [Asm, Bug #538629].
* Fixed Ruby parser (why didn't the compiler report my screw-up?) [Ruby].

ctags-5.3 (Wed Jul 17 2002)
* Allowed --etags-include option without input files.