@@ -1,7 +1,9 @@
 Current Version: @@VERSION@@
 
-ctags-5.4.1 (Sat Oct 26 2002)
+ctags-5.4.1 (Tue Nov 12 2002)
 * Changed kind indicator for methods from 'f' to 'm' [Tcl].
+* Added support for dimensioned variables to ASP parser, contributed by Simon
+  Bohlin [ASP].
 * Fixed problem with infinite loop in certain comments [PL/SQL, Bug #629115].
 * Fixed man page errors and omissions.
 * Fixed bug in readFieldValue() in readtags library.
